--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 # config example
 # 
+# WaitAddress: wait ip:port available
 #
 # Directory: application work dic
 # Exe:application name
@@ -18,10 +19,12 @@
 # Exe = "server"
 # Environment = ""
 
+WaitAddress = ["10.8.0.60:3363"]
+
 [[Servers]]
-Directory = "/home/swk/code/server"
+Directory = "/home/server"
 Exe = "server"
 Environment = ["PYTHONPATH=/lib/python","CUDA=/lib/cuda"]
 FaildSecond = 5
-Args = ["swk=1","swk=2"]
+Args = ["arg1=1","arg2=2"]
 UpdateFileName = "update.zip"
