--- a/config.toml
+++ b/config.toml
@@ -19,12 +19,12 @@
 # Exe = "server"
 # Environment = ""
 
-WaitAddress = ["10.8.0.60:3363"]
+WaitAddress = []
 
 [[Servers]]
-Directory = "/home/server"
-Exe = "server"
-Environment = ["PYTHONPATH=/lib/python","CUDA=/lib/cuda"]
+Directory = ""
+Exe = ""
+Environment = []
 FaildSecond = 5
-Args = ["arg1=1","arg2=2"]
-UpdateFileName = "update.zip"
+Args = []
+UpdateFileName = ""
